--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.tactbug</groupId>
     <artifactId>tact-id</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
